testdata/rules-tests/bad/AG-017-v1-rust-ignored-fallible.rs
fn verify_token(token: &str) -> Result<User, Error> {
    let _ = validate_signature(token);
    let user = decode_payload(token)?;
    Ok(user)
}
